--- a/hugo.toml
+++ b/hugo.toml
@@ -31,7 +31,7 @@ enableRobotsTXT = true
 [params]
   avatarURL = "/images/pfp.jpg"
   avatarSize = "size-m"
-  accentColor = "#08F"
+  accentColor = "#74c7ec"
       socialIcons = [
       {name = "github", url = "https://github.com/"},
       {name = "twitter", url = "https://twitter.com/notohhh"},
