--- a/hugo.toml
+++ b/hugo.toml
@@ -33,7 +33,7 @@ enableRobotsTXT = true
   avatarSize = "size-m"
   accentColor = "#74c7ec"
       socialIcons = [
-      {name = "github", url = "https://github.com/"},
+      {name = "github", url = "https://github.com/notohh"},
       {name = "twitter", url = "https://twitter.com/notohhh"},
       {name = "twitch", url = "https://www.twitch.tv/notohh"},
       {name = "discord", url = "https://discord.com/users/155965294429470720"}
