--- a/.forgejo/workflows/deployment.yml
+++ b/.forgejo/workflows/deployment.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy ./dist --project-name=notohh.dev
+          command: pages deploy ./dist --project-name=notohh-dev
