--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ theme = "hello-friend-ng"      # https://github.com/rhazdon/hugo-theme-hello-fri
 PygmentsCodeFences = false
 PygmentsStyle = "monokai"
 
-paginate = 10
+pagination.pagerSize = 10
 
 archetypeDir = "archetypes"
 contentDir = "content"
