--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint ./ & npx depcheck",
+		"lint:fix": "eslint ./src --fix"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.19.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.1",
+		"@typescript-eslint/parser": "^8.22.0",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^5.0.0-beta.6",
+		"eslint-plugin-svelte": "^2.46.1",
+		"prettier": "^3.4.2",
+		"prettier-eslint": "^16.3.0",
 		"svelte": "^5.19.6",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^4.0.1",
 		"tailwindcss-motion": "^1.0.1",
 		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.22.0",
 		"vite": "^6.0.11"
 	}
 }
