--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.4.2",
 		"prettier-eslint": "^16.3.0",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.19.6",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^4.0.1",
