--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.8",
 		"@typescript-eslint/parser": "^8.24.1",
-		"daisyui": "^5.0.0-beta.8",
+		"daisyui": "^5.0.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.5.1",
 		"prettier-eslint": "^16.3.0",
